--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body{
         <div class="couv" aria-hidden="true"></div>
         <div class="card" aria-hidden="true">
           <h4>Indice I</h4>
-          <p>On murmure des noms empruntés au passé, et une couleur parfois trop vive sur les lettres. Observe les initiales.</p>
+          <p>Où l’élégance s’expose, la lumière se déploie en miroir. » ou « L’élégance marche, et la lumière danse à ses côtés. </p>
         </div>
         <div class="base"></div>
         <img class="sparkle" src="small-sparkle.png" alt="" aria-hidden="true" />
@@ -141,7 +141,7 @@ body{
         <div class="couv" aria-hidden="true"></div>
         <div class="card" aria-hidden="true">
           <h4>Indice II</h4>
-          <p>Un chiffre résonne plus fort que les autres — parfois pair, parfois impair. Note la position des aiguilles embuées.</p>
+          <p>Les plumes et le velours conspirent pour retenir le regard. </p>
         </div>
         <div class="base"></div>
         <img class="sparkle" src="small-sparkle.png" alt="" aria-hidden="true" />
@@ -153,7 +153,7 @@ body{
         <div class="couv" aria-hidden="true"></div>
         <div class="card" aria-hidden="true">
           <h4>Indice III</h4>
-          <p>Des étiquettes arrachées, un ruban rouge qui refuse de partir — parfois la réponse se cache dans le pluriel des mots.</p>
+          <p>Les costumes osent des couleurs que les yeux hésitent à suivre. </p>
         </div>
         <div class="base"></div>
         <img class="sparkle" src="small-sparkle.png" alt="" aria-hidden="true" />
