--- a/index.html
+++ b/index.html
@@ -76,8 +76,34 @@ body{
 .object img{
   width:180px;height:auto;display:block;user-select:none;pointer-events:none
 }
-.object .base{
-  width:100%;height:40px;background:linear-gradient(180deg, rgba(0,0,0,0.2), rgba(0,0,0,0.35));border-radius:6px;margin-top:-6px
+.object .base {
+  width: 140px;
+  height: 16px;
+  background: radial-gradient(ellipse at center, rgba(0,0,0,0.35), rgba(0,0,0,0.05));
+  border-radius: 50%;
+  margin-top: -8px;
+  filter: blur(2px);
+  position: relative;
+  overflow: hidden;
+}
+
+/* Petite animation de scintillement */
+.object .base::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -40%;
+  width: 40%;
+  height: 100%;
+  background: linear-gradient(120deg, rgba(255,255,255,0.15), rgba(255,255,255,0.0));
+  transform: skewX(-25deg);
+  animation: sparkle 2s infinite;
+}
+
+@keyframes sparkle {
+  0% { left: -40%; opacity: 0; }
+  50% { left: 100%; opacity: 0.4; }
+  100% { left: 100%; opacity: 0; }
 }
 .couv{
   position:absolute;left:50%;transform:translateX(-50%);top:6px;width:200px;height:120px;transform-origin:top center;border-radius:6px;transition:transform .8s cubic-bezier(.2,.9,.2,1), box-shadow .3s
