--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body{
         <img src="chapeau.png" alt="Haut-de-forme ancien" />
         <div class="card" aria-hidden="true">
           <h4>Indice I</h4>
-          <p>Où l’élégance s’expose, la lumière se déploie en miroir. » ou « L’élégance marche, et la lumière danse à ses côtés. </p>
+          <p>L’élégance marche, et la lumière danse à ses côtés. </p>
         </div>
         <div class="base"></div>
         <img class="sparkle" src="small-sparkle.png" alt="" aria-hidden="true" />
