--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@ body{
 .object.open .sparkle {
   opacity: 0 !important;
 }
+  /* Ajustement spécifique : la valise est agrandie */
+#obj-valise img {
+  width: 210px;   /* tu peux augmenter ou réduire selon le rendu */
+}
 </style>
 </head>
 <body>
