--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body{
   display:flex;align-items:center;justify-content:center;padding:30px
 }
 .panel{
-  width:100%;max-width:1000px;background:rgba(23,18,16,0.25);border:1px solid rgba(255,255,255,0.04);
+  width:100%;max-width:1000px;background: rgba(115, 95, 70, 0.6)/* beige foncé transparent */;border:1px solid rgba(255,255,255,0.04);
   padding:28px;border-radius:12px;backdrop-filter: blur(3px);
   box-shadow: 0 12px 40px rgba(0,0,0,0.6);
 }
@@ -212,8 +212,8 @@ body{
   <div class="panel" role="main">
     <div class="header">
       <div class="frame">
-        <h1 class="title">Salon Chronosphérique</h1>
-        <p class="subtitle">Un cabinet vintage où le temps hésite.</p>
+        <h1 class="title">Saurez-vous retrouver les indices et trouver le thème du gala ?</h1>
+        <p class="subtitle">Attention, il ne vous reste plus beaucoup de temps...</p>
       </div>
     </div>
 
