--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{
   margin:0;
   font-family: 'Georgia', 'Times New Roman', serif;
   background-color:var(--dark);
-  color:var(--cream);
+  color: #222;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
   background-image: url('fond.jpg');
@@ -65,10 +65,10 @@ body{
 .frame{
   border:2px solid rgba(183,144,74,0.12);padding:14px;border-radius:8px;background:linear-gradient(180deg, rgba(0,0,0,0.18), rgba(0,0,0,0.08));
 }
-.title{font-size:1.8rem;color:var(--cream);margin:0}
-.subtitle{color:rgba(255,255,255,0.75);margin:0;font-size:0.95rem}
+.title{font-size:1.8rem;color: #222;margin:0}
+.subtitle{color: #222;margin:0;font-size:0.95rem}
 .description{
-  margin-top:14px;color:rgba(255,255,255,0.85);line-height:1.45;font-size:1.02rem;
+  margin-top:14px;color: #222;line-height:1.45;font-size:1.02rem;
   background: linear-gradient(90deg, rgba(0,0,0,0.08), rgba(0,0,0,0.02));padding:12px;border-radius:8px
 }
 .room{
@@ -125,8 +125,8 @@ body{
 .object.open .card{opacity:1;transform:translate(-50%,0) scale(1)}
 .card h4{margin:0 0 8px 0;font-size:1rem}
 .card p{margin:0;font-size:0.95rem;color:#222;line-height:1.4}
-.hint{font-size:0.85rem;color:rgba(255,255,255,0.7);margin-top:10px;text-align:center}
-.footer{margin-top:18px;color:rgba(255,255,255,0.6);font-size:0.9rem;text-align:center}
+.hint{font-size:0.85rem;color: #222;margin-top:10px;text-align:center}
+.footer{margin-top:18px;color: #222;font-size:0.9rem;text-align:center}
 
 /* small responsive tweaks */
 @media (max-width:640px){
