--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Salon Chronosphérique — Indices</title>
+<title>Gala Médecine 2026 — Indices</title>
 <!--
 Fichier prêt pour GitHub Pages : index.html
 
